fix horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+html,
+body {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
 .container-lg {
   max-width: 1200px;
 }
